Stop too early converting of fractions of the FloatColorInput

Fix the input field from converting the fractions too early by blocking
the input field from signals from the slider.
The slider would trigger the input with a rounded value which resulted
in the early conversion.

BUG: 409818