libs/widgets/kis_color_input.cpp
@@ -312,6 +312,8 @@ void KisFloatColorInput::update()
     qreal value = 1.0;
     m_minValue = m_displayRenderer->minVisibleFloatValue(m_channelInfo);
     m_maxValue = m_displayRenderer->maxVisibleFloatValue(m_channelInfo);
+    m_dblNumInput->blockSignals(true);
+    m_colorSlider->blockSignals(true);
 
     switch (m_channelInfo->channelValueType()) {
 #ifdef HAVE_OPENEXR
@@ -349,6 +351,8 @@ void KisFloatColorInput::update()
     const qreal floatRange = m_maxValue - m_minValue;
     m_dblNumInput->setValue(value);
     m_colorSlider->setValue((value - m_minValue) / floatRange * 255);
+    m_dblNumInput->blockSignals(false);
+    m_colorSlider->blockSignals(false);
 }
 
 KisHexColorInput::KisHexColorInput(QWidget* parent, KoColor* color, KoColorDisplayRendererInterface *displayRenderer, bool usePercentage) :
